cambio menor en texto

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                       <div class="card-body">
                       <h5 class="card-title mb-4">Página personal</h5>
                       <span>Bootstrap</span>
-                      <p class="card-direccion">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis nemo culpa voluptas, dignissimos autem corporis reprehenderit temporibus unde aliquam voluptatem nulla praesentium iste doloribus perspiciatis fugiat, iusto impedit quis accusantium?</p>
+                      <p class="card-direccion">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis nemo culpa voluptas, amo los michis reprehenderit temporibus unde aliquam voluptatem nulla praesentium iste doloribus perspiciatis fugiat, iusto impedit quis accusantium?</p>
                       <a href="https://github.com/cpileon/fdsw-version_cpileon" target="_blank"  class="btn btn-dark">Ver repositorio</a>
                       <a href="https://cpileon.github.io/fdsw-version_cpileon/" target="_blank"  class="btn btn-dark">Ver demo</a>
                       </div>
